2008-06-10 13:15:29  Tim Janik  <timj@imendio.com>

	* gtype.c (g_type_class_ref): fixed race condition where references to
	partially initialized classes could be handed out.

2008-05-28  Michael Natterer  <mitch@imendio.com>

	* Makefile.am: don't define G_DISABLE_SINGLE_INCLUDES, it's in
	the global CPPFLAGS now.

2008-05-27  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.17.0 ===

2008-05-05  Michael Natterer  <mitch@imendio.com>

	* Makefile.am. build with G_DISABLE_SINGLE_INCLUDES to prevent
	code from being checked in that breaks the build of applications
	which use G_DISABLE_SINGLE_INCLUDES.

2008-03-16  Tor Lillqvist  <tml@novell.com>

	* Makefile.am: Define gobject_def locally here instead of using an
	Autoconf variable.

2008-03-10  Matthias Clasen  <mclasen@redhat.com>
	
	* === Released 2.16.1 ===

2008-03-10  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.16.0 ===

2008-02-25  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.15.6 ===

2008-02-11  Matthias Clasen <mclasen@redhat.com>

	* === Released 2.15.5 ===

2008-02-06  Benjamin Otte  <otte@gnome.org>

	* gparamspecs.c: (param_gtype_set_default), (param_gtype_validate):
	make GParamGType require the set type during construction instead of
	using G_TYPE_NONE, which causes issues when setting.
	Bug 513073 - g_param_spec_gtype breaks with G_PARAM_CONSTRUCT

2008-02-05 18:52:07  Tim Janik  <timj@imendio.com>

	* gtype.c: added recursive mutex to protect class initialization,
	default interface initialization and per-class interface construction.
	a lock to this recursive mutex is held during user callback invocations
	such as initializers or finalizers, effectively allowing only one thread
	to run class/interface initializers/finalizers at a time.
	also made misc fixups. this fixes:
	Bug 64764 - Class initialization isn't thread safe.

2008-02-05 18:41:22  Tim Janik  <timj@imendio.com>

	* Makefile.am: integrate tests/.

	* tests/: new directory for libgobject tests.
